# avr-device

./: .gitignore  .travis.yml  ATmega88P.atdf  CHANGELOG.md  Cargo.toml  Makefile  README.md  avr-unknown-gnu-atmega328p.json  build.rs  gen-intr-lut.sh
.cargo/: config.toml
.github/workflows/: ci.yml
examples/atmega328p/: Cargo.toml  Cargo.toml.example  README.md  rust-toolchain.toml
examples/atmega328p/.cargo/: config.toml
examples/atmega328p/src/: main.rs
macros/: Cargo.toml
macros/src/: .gitignore  lib.rs
patch/: at90can64.yaml  at90usb1286.yaml  atmega1280.yaml  atmega1284p.yaml  atmega128a.yaml  atmega128rfa1.yaml  atmega16.yaml  atmega164pa.yaml  atmega168.yaml  atmega169pa.yaml  atmega16u2.yaml  atmega2560.yaml  atmega3208.yaml  atmega3209.yaml  atmega324pa.yaml  atmega328.yaml  atmega328p.yaml  atmega328pb.yaml  atmega32a.yaml  atmega32u2.yaml  atmega32u4.yaml  atmega4808.yaml  atmega4809.yaml  atmega48p.yaml  atmega64.yaml  atmega644.yaml  atmega8.yaml  atmega88p.yaml  atmega8u2.yaml  attiny13a.yaml  attiny1604.yaml  attiny1606.yaml  attiny1614.yaml  attiny1617.yaml  attiny1626.yaml  attiny167.yaml  attiny202.yaml  attiny204.yaml  attiny212.yaml  attiny214.yaml  (+30 more)
patch/common/: ac.yaml  adc.yaml  attiny-0-series.yaml  attiny-1-series.yaml  cpu.yaml  eeprom.yaml  pll.yaml  port.yaml  spi.yaml  twi-atmega128a.yaml  twi.yaml  usart-single-attiny2313.yaml  usart-single-attiny2313a.yaml  usart-single-spi.yaml  usart-spi.yaml  usart.yaml  wdt-more-cycles.yaml  wdt.yaml
patch/common/ac/: acsr.yaml
patch/common/at90/: adc.yaml  spi.yaml  usart.yaml
patch/common/attiny-xmega/: 0-series.yaml  1-series.yaml  2-series.yaml  common.yaml  x04-fix-portc.yaml
patch/common/mega0/: 32pin.yaml  48pin.yaml  common.yaml  port.yaml
patch/common/timer/: tc0.yaml
patch/common/tiny/: attinyx61a-adc.yaml  attinyx61a-ports.yaml  attinyx61a-timers.yaml  exint.yaml  usi.yaml
patch/timer/: atmega1284p.yaml  atmega128a.yaml  atmega128rfa1.yaml  atmega16.yaml  atmega169pa.yaml  atmega2560.yaml  atmega324pa.yaml  atmega328p.yaml  atmega328pb.yaml  atmega32u4.yaml  atmega8.yaml  attiny13a.yaml  attiny167.yaml  attiny828.yaml  attiny84.yaml  attiny841.yaml  attiny85.yaml  attiny861.yaml  attiny88.yaml
patch/timer/dev/: 10bit.yaml  16bit-mega8.yaml  16bit-tiny861-tc0.yaml  16bit.yaml  8bit-async-mega8.yaml  8bit-async.yaml  8bit-mega128a.yaml  8bit-mega8.yaml  8bit-tiny.yaml  8bit-tiny167.yaml  8bit-tiny85-tc1.yaml  8bit-tiny88.yaml  8bit-tiny8n-tc0.yaml  8bit.yaml
src/: asm.rs  ccp.rs  devices.rs  interrupt.rs  lib.rs
src/devices/: mod.rs
svd/: atmega4809.svd
