[package]
name = "avr-device"
version = "0.6.0"

authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"
description = "Register access crate for AVR microcontrollers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rahix/avr-device"
readme = "README.md"
keywords = ["avr", "arduino"]
categories = ["no-std", "embedded", "hardware-support"]

include = [
    "/src/**/*.rs",
    "/LICENSE-*",
    "/README.md",
    "/build.rs",
]

[package.metadata.docs.rs]
features = ["docsrs"]

[features]
device-selected = []
atmega328p = ["device-selected"]
atmega32u4 = ["device-selected"]
rt = ["avr-device-macros"]

critical-section-impl = ["critical-section/restore-state-u8"]

# Unfortunately, we can only build documentation for a subset of the supported
# MCUs on docs.rs.  If you think a very popular chip is missing from the list,
# feel free to add it here.
docsrs = ["rt", "ufmt", "atmega328p", "atmega32u4"]

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.2"
cfg-if = "1.0.0"
ufmt = { version = "0.2.0", optional = true }
critical-section = { version = "1.1.1", optional = true }

[dependencies.avr-device-macros]
path = "macros/"
version = "=0.6.0"
optional = true
