[package]
name = "avr-device"
version = "0.7.0"

authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"
description = "Register access crate for AVR microcontrollers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rahix/avr-device"
readme = "README.md"
keywords = ["avr", "arduino"]
categories = ["no-std", "embedded", "hardware-support"]

include = [
    "/LICENSE-*",
    "/README.md",
    "/build.rs",
    "/patch/**/*.yaml",
    "/src/**/*.rs",
    "/vendor/*.atdf",
    "/vendor/LICENSE",
    "/examples/**/src/*.rs"
]

[package.metadata.docs.rs]
features = ["docsrs"]

[features]
device-selected = []
at90usb1286 = ["device-selected"]
atmega1280 = ["device-selected"]
atmega1284p = ["device-selected"]
atmega128a = ["device-selected"]
atmega128rfa1 = ["device-selected"]
atmega16 = ["device-selected"]
atmega16u2 = ["device-selected"]
atmega164pa = ["device-selected"]
atmega168 = ["device-selected"]
atmega2560 = ["device-selected"]
atmega8 = ["device-selected"]
atmega8u2 = ["device-selected"]
atmega324pa = ["device-selected"]
atmega328p = ["device-selected"]
atmega328pb = ["device-selected"]
atmega3208 = ["device-selected"]
atmega3209 = ["device-selected"]
atmega4808 = ["device-selected"]
atmega4809 = ["device-selected"]
atmega48p = ["device-selected"]
atmega32a = ["device-selected"]
atmega32u2 = ["device-selected"]
atmega32u4 = ["device-selected"]
atmega64 = ["device-selected"]
atmega644 = ["device-selected"]
atmega88p = ["device-selected"]
attiny13a = ["device-selected"]
attiny167 = ["device-selected"]
attiny202 = ["device-selected"]
attiny212 = ["device-selected"]
attiny214 = ["device-selected"]
attiny2313 = ["device-selected"]
attiny2313a = ["device-selected"]
attiny26 = ["device-selected"]
attiny402 = ["device-selected"]
attiny404 = ["device-selected"]
attiny412 = ["device-selected"]
attiny414 = ["device-selected"]
attiny416 = ["device-selected"]
attiny44a = ["device-selected"]
attiny816 = ["device-selected"]
attiny828 = ["device-selected"]
attiny84 = ["device-selected"]
attiny841 = ["device-selected"]
attiny84a = ["device-selected"]
attiny85 = ["device-selected"]
attiny861 = ["device-selected"]
attiny88 = ["device-selected"]
attiny1614 = ["device-selected"]
avr64du32 = ["device-selected"]
avr64du28 = ["device-selected"]
rt = ["avr-device-macros", "critical-section"]

critical-section = ["critical-section-impl"]
critical-section-impl = ["critical-section/restore-state-u8"]

docsrs = [
    "rt",
    "ufmt",
    "at90usb1286",
    "atmega1280",
    "atmega1284p",
    "atmega128a",
    "atmega128rfa1",
    "atmega16",
    "atmega16u2",
    "atmega164pa",
    "atmega168",
    "atmega2560",
    "atmega8",
    "atmega8u2",
    "atmega324pa",
    "atmega328p",
    "atmega328pb",
    "atmega3208",
    "atmega3209",
    "atmega4808",
    "atmega4809",
    "atmega48p",
    "atmega32a",
    "atmega32u2",
    "atmega32u4",
    "atmega64",
    "atmega644",
    "atmega88p",
    "attiny13a",
    "attiny167",
    "attiny202",
    "attiny212",
    "attiny214",
    "attiny2313",
    "attiny2313a",
    "attiny26",
    "attiny402",
    "attiny404",
    "attiny412",
    "attiny414",
    "attiny416",
    "attiny44a",
    "attiny816",
    "attiny828",
    "attiny84",
    "attiny841",
    "attiny84a",
    "attiny85",
    "attiny861",
    "attiny88",
    "attiny1614",
    "avr64du32",
    "avr64du28",
]

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.2"
cfg-if = "1.0.0"
ufmt = { version = "0.2.0", optional = true }
critical-section = { version = "1.1.1", optional = true }

[dependencies.avr-device-macros]
path = "macros/"
version = "=0.7.0"
optional = true

[build-dependencies]
svd2rust = "0.35.0"
svdtools = "0.4.0"
atdf2svd = "0.4.0"
prettyplease = "0.2"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }

[dev-dependencies]
nb = "0.1.2"
embedded-hal = "0.2.3"

[[example]]
name = "atmega328p"
path = "examples/atmega328p/src/main.rs"
required-features = ["atmega328p", "rt"]

[profile.dev]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
