[package]
name = "avr-device"
version = "0.7.0"

authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"
description = "Register access crate for AVR microcontrollers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rahix/avr-device"
readme = "README.md"
keywords = ["avr", "arduino"]
categories = ["no-std", "embedded", "hardware-support"]

include = [
    "/src/**/*.rs",
    "/LICENSE-*",
    "/README.md",
    "/build.rs",
    "/patch/**/*.yaml",
    "/vendor/*.atdf",
    "/vendor/LICENSE",
    "/examples/**/src/*.rs"
]

[package.metadata.docs.rs]
features = ["docsrs"]

[features]
device-selected = []
at90can128 = ["device-selected"]
at90can64 = ["device-selected"]
at90can32 = ["device-selected"]
at90usb1286 = ["device-selected"]
atmega1280 = ["device-selected"]
atmega1284p = ["device-selected"]
atmega128a = ["device-selected"]
atmega128rfa1 = ["device-selected"]
atmega16 = ["device-selected"]
atmega16u2 = ["device-selected"]
atmega164pa = ["device-selected"]
atmega168 = ["device-selected"]
atmega2560 = ["device-selected"]
atmega8 = ["device-selected"]
atmega8u2 = ["device-selected"]
atmega324pa = ["device-selected"]
atmega328p = ["device-selected"]
atmega328pb = ["device-selected"]
atmega3208 = ["device-selected"]
atmega3209 = ["device-selected"]
atmega4808 = ["device-selected"]
atmega4809 = ["device-selected"]
atmega48p = ["device-selected"]
atmega32a = ["device-selected"]
atmega32u2 = ["device-selected"]
atmega32u4 = ["device-selected"]
atmega64 = ["device-selected"]
atmega644 = ["device-selected"]
atmega88p = ["device-selected"]
attiny13a = ["device-selected"]
attiny167 = ["device-selected"]
attiny202 = ["device-selected"]
attiny212 = ["device-selected"]
attiny204 = ["device-selected"]
attiny214 = ["device-selected"]
attiny2313 = ["device-selected"]
attiny2313a = ["device-selected"]
attiny26 = ["device-selected"]
attiny261a = ["device-selected"]
attiny402 = ["device-selected"]
attiny404 = ["device-selected"]
attiny412 = ["device-selected"]
attiny414 = ["device-selected"]
attiny416 = ["device-selected"]
attiny417 = ["device-selected"]
attiny44a = ["device-selected"]
attiny461a = ["device-selected"]
attiny804 = ["device-selected"]
attiny816 = ["device-selected"]
attiny817 = ["device-selected"]
attiny828 = ["device-selected"]
attiny84 = ["device-selected"]
attiny841 = ["device-selected"]
attiny84a = ["device-selected"]
attiny85 = ["device-selected"]
attiny861 = ["device-selected"]
attiny861a = ["device-selected"]
attiny88 = ["device-selected"]
attiny1604 = ["device-selected"]
attiny1606 = ["device-selected"]
attiny1614 = ["device-selected"]
attiny1617 = ["device-selected"]
attiny1626 = ["device-selected"]
attiny3217 = ["device-selected"]
avr64du32 = ["device-selected"]
avr64du28 = ["device-selected"]
avr128db28 = ["device-selected"]
rt = ["avr-device-macros"]

critical-section = ["critical-section/restore-state-u8"]

default = ["critical-section"]

# Unfortunately, we can only build documentation for a subset of the supported
# MCUs on docs.rs.  If you think a very popular chip is missing from the list,
# feel free to add it here.
docsrs = ["rt", "ufmt", "atmega328p", "atmega32u4", "atmega2560", "attiny85", "atmega4809"]

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
cfg-if = "1.0.0"
ufmt = { version = "0.2.0", optional = true }
critical-section = { version = "1.2.0", optional = true }

[dependencies.avr-device-macros]
path = "macros/"
version = "=0.7.0"
optional = true

[build-dependencies]
svd2rust = { version = "=0.37.0", default-features = false }
svdtools = { version = "=0.5.0", default-features = false }
atdf2svd = { version = "=0.5.1", default-features = false }
prettyplease = "=0.2.37"
svd-rs = { version = "=0.14.12", default-features = false }
yaml-rust2 = { version = "=0.10.4", default-features = false }
syn = { version = "=2.0.106", default-features = false, features = ["full", "parsing"] }
anyhow = "1.0"
