[package]
name = "avr-device-macros"
version = "0.2.0"

authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
description = "Attribute macros for re-export in `avr-device`"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rahix/avr-device"

include = [
    "src/*.rs"
]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.19"

[dependencies.syn]
version = "1.0.35"
features = ["extra-traits", "full"]
