[package]
name = "mega328-test"
version = "0.1.0"
authors = ["Frank Villaro-Dixon <frank@villaro-dixon.eu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mega328-test"
test = false
bench = false


[dependencies]
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"


[dependencies.avr-device]
version = "0.5.3"
# To use the local version of avr-device instead, uncomment the following line:
# NB: make sure to build this crate first by running `make` at the root of the project
# path = "../.."
features = ["atmega328p", "rt"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
