[package]
name = "mega328-test"
version = "0.1.0"
authors = ["Frank Villaro-Dixon <frank@villaro-dixon.eu>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mega328-test"
test = false
bench = false


[dependencies]
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"


[dependencies.avr-device]
version = "0.7"
path = "../.."
features = ["atmega328p", "rt"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
